@@ -1,5 +1,6 @@
 1.19.3 /
 [Alexandr Topilski]
+- Fix create key routine
 
 1.19.2 / October 15, 2018
 [Alexandr Topilski]
