@@ -1,5 +1,6 @@
 1.20.3 /
 [Alexandr Topilski]
+- Fix create key routine
 
 1.20.2 / October 15, 2018
 [Alexandr Topilski]
